force-app/main/default/objects/AdditionalChargeSetting__c/AdditionalChargeSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Additional Charge Setting</label>
</CustomObject>