force-app/main/default/objects/AdditionalChargeSetting__c/fields/BagContainerNames__c.field-meta.xml
<CustomField>
    <fullName>BagContainerNames__c</fullName>
    <label>Bag Container Names</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>