force-app/main/default/objects/AdditionalChargeSetting__c/fields/BagDeliveryChargeProduct__c.field-meta.xml
<CustomField>
    <fullName>BagDeliveryChargeProduct__c</fullName>
    <label>Bag Delivery Charge Product</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>