force-app/main/default/objects/AdditionalChargeSetting__c/fields/BinContainerNames__c.field-meta.xml
<CustomField>
    <fullName>BinContainerNames__c</fullName>
    <label>Bin Container Names</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>