force-app/main/default/objects/AdditionalChargeSetting__c/fields/BinDeliveryChargeProduct__c.field-meta.xml
<CustomField>
    <fullName>BinDeliveryChargeProduct__c</fullName>
    <label>Bin Delivery Charge Product</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>