force-app/main/default/objects/AdditionalChargeSetting__c/fields/IsDeliveryChargeActive__c.field-meta.xml
<CustomField>
    <fullName>IsDeliveryChargeActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Charge Active?</label>
    <type>Checkbox</type>
</CustomField>